feat:  offer